--- a/desafio-08/index.html
+++ b/desafio-08/index.html
@@ -29,6 +29,9 @@
           <a href="#">Fazer Login</a>
         </div>
       </div>
+      <div class="menu">
+        <img src="./assets/img/menu.svg" alt="Ícone do menu">
+      </div>
     </nav>
   </header>
 
