--- a/desafio-09/index.html
+++ b/desafio-09/index.html
@@ -38,8 +38,8 @@
     <section class="intro">
       <div class="container">
         <div class="ds-intro">
-          <h1>Olá, eu sou o <span>Iuri Silva :)</span></h1>
-          <p>Desenvolvedor Front-End & UI Designer</p>
+          <h1>Olá, eu sou o <span>Henrique Torrico :)</span></h1>
+          <p>Desenvolvedor Front-End</p>
           <a href="#">Download CV</a>
           <a href="#">Entrar em contato</a>
         </div>
