--- a/desafio-10/index.html
+++ b/desafio-10/index.html
@@ -1,260 +1,112 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home | Naped</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/styles/style.css">
-  <link rel="stylesheet" href="./assets/styles/home.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Lexend+Deca&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./assets/styles/main.css">
 </head>
-<body>
 
+<body>
   <header>
-    <div class="menus">
+    <nav class="container">
       <div class="logo">
-        <h2>Naped</h2>
+        <h1>Naped</h1>
       </div>
-      <nav class="menu-desktop">
+      <div class="menu">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Séries</a></li>
           <li><a href="#">Filmes</a></li>
           <li><a href="#">Animes</a></li>
           <li><a href="#">Games</a></li>
-          <li><a href="#" class="minha-conta">Minha conta</a></li>
+          <li><a href="#" class="conta">Minha conta</a></li>
         </ul>
-      </nav>
-    </div>
+      </div>
+    </nav>
   </header>
 
-  <section class="msg-entrada">
-    <div class="container-entrada">
-      <h1>Mundo nerd? <span>Naped!</span></h1>
-      <p>O Naped pode ser sua fonte de informações sobre <span>o mundo nerd e outros assuntos relacionados.</span></p>
-    </div>
-  </section>
-
-  <section class="populares">
-    <div class="container-populares">
-      <div class="top-single top1">     
-        <img src="./assets/img/top1.jpg" alt="Top ranking">
-        <div class="ds-top">
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</h2>
-        </div>     
-        <div class="conteudo-top">
-          <p>Lorem</p>
-        </div> 
+  <main>
+    <section class="intro">
+      <div class="container">
+        <h2>Mundo nerd? <span>Naped!</span></h2>
+        <p>O Naped pode ser sua fonte de informações sobre o mundo nerd e outros assuntos relacionados.</p>
       </div>
-      <div class="container-outros">    
-        <div class="top-single">
-          <img src="./assets/img/top2.jpg" alt="Top ranking">
-          <div class="ds-top">
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</h2>
-          </div>  
-          <div class="conteudo-top">
-            <p>Lorem</p>
-          </div>  
-        </div>
-        <div class="top-single">
-          <img src="./assets/img/top3.jpg" alt="Top ranking">
-          <div class="ds-top">
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</h2>
-          </div>   
-          <div class="conteudo-top">
-            <p>Lorem</p>
-          </div> 
-        </div>
-      </div>    
-    </div>
-  </section>
+    </section>
 
-  <section class="todos-animes">
-    <div class="container-animes">
-      <div class="container-lista-esquerda">
-        <div class="cards-animes">
-          <div class="img-anime">
-            <img src="./assets/img/img-anime01.jpg" alt="">
-            <div class="ds-img">
-              <p>Lorem</p>
-            </div>           
-          </div>
-          <div class="ds-anime">
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor...</p>
-            <p>00/00/0000</p>
-            <a href="#">Ler notícia</a>
-          </div>    
-        </div> <!-- fim cards -->
-        <div class="cards-animes">
-          <div class="img-anime">
-            <img src="./assets/img/img-anime02.jpg" alt="">
-            <div class="ds-img">
-              <p>Lorem</p>
-            </div>           
-          </div>
-          <div class="ds-anime">
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor...</p>
-            <p>00/00/0000</p>
-            <a href="#">Ler notícia</a>
-          </div>    
-        </div> <!-- fim cards -->
-        <div class="cards-animes">
-          <div class="img-anime">
-            <img src="./assets/img/img-anime03.jpg" alt="">
-            <div class="ds-img">
-              <p>Lorem</p>
-            </div>           
-          </div>
-          <div class="ds-anime">
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor...</p>
-            <p>00/00/0000</p>
-            <a href="#">Ler notícia</a>
-          </div>    
-        </div> <!-- fim cards -->
-        <div class="cards-animes">
-          <div class="img-anime">
-            <img src="./assets/img/img-anime04.jpg" alt="">
-            <div class="ds-img">
-              <p>Lorem</p>
-            </div>           
-          </div>
-          <div class="ds-anime">
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor...</p>
-            <p>00/00/0000</p>
-            <a href="#">Ler notícia</a>
-          </div>    
-        </div> <!-- fim cards -->
-        <div class="cards-animes">
-          <div class="img-anime">
-            <img src="./assets/img/img-anime05.jpg" alt="">
-            <div class="ds-img">
-              <p>Lorem</p>
-            </div>           
-          </div>
-          <div class="ds-anime">
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor...</p>
-            <p>00/00/0000</p>
-            <a href="#">Ler notícia</a>
-          </div>    
-        </div> <!-- fim cards -->
-      </div>
-      <div class="container-lista-direita">
-        <div class="titulo">
-          <h2>Lorem ipsum dolor</h2> 
-        </div>
-        <div class="cards-animes-direita">
-          <div class="img-anime-direita">
-            <img src="./assets/img/img-anime06.jpg" alt="">
-            <div class="ds-anime-direita">
-              <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</h3>
-            </div>
-            <div class="top-single">
-              <p>Lorem</p>
-            </div>
-          </div>
-        </div> <!-- fim cards -->
-        <div class="cards-animes-direita">
-          <div class="img-anime-direita">
-            <img src="./assets/img/img-anime07.jpg" alt="">
-            <div class="ds-anime-direita">
-              <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</h3>
-            </div>
-            <div class="top-single">
-              <p>Lorem</p>
-            </div>
-          </div>
-        </div> <!-- fim cards -->
-        <div class="cards-animes-direita">
-          <div class="img-anime-direita">
-            <img src="./assets/img/img-anime08.jpg" alt="">
-            <div class="ds-anime-direita">
-              <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</h3>
-            </div>
-            <div class="top-single">
-              <p>Lorem</p>
-            </div>
-          </div>
+    <section class="tops-do-dia">
+      <div class="container">
+        <figure class="top1 tops">
+          <span>Lorem</span>
+          <img src="./assets/img/top1.jpg" alt="Top 1 do dia">
+          <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in,
+            blandit molestie dolor.</figcaption>
+        </figure>
+        <div class="container-tops">
+          <figure class="tops">
+            <span>Lorem</span>
+            <img src="./assets/img/top2.jpg" alt="Top 2 do dia">
+            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit
+              in, blandit molestie dolor.</figcaption>
+          </figure>
+          <figure class="tops">
+            <span>Lorem</span>
+            <img src="./assets/img/top3.jpg" alt="Top 3 do dia">
+            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et veli
+              in, blandit molestie dolor.</figcaption>
+          </figure>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="noticias-recentes">
-    <div class="container-recentes">
-      <div class="titulo-recentes">
-        <h2>Notícias mais recentes</h2>
+    <section class="geral">
+      <div class="container">
+        <div class="container-scroll"></div>
+        <div class="container-restante">
+          <div class="title">
+            <h3>Lorem ipsum dolor</h3>
+          </div>
+          <figure class="single-filme">
+            <span>Lorem</span>
+            <img src="./assets/img/img-anime06.jpg" alt="Filmes">
+            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et veli
+              in, blandit molestie dolor.</figcaption>
+          </figure>
+          <figure class="single-filme">
+            <span>Lorem</span>
+            <img src="./assets/img/img-anime07.jpg" alt="Filmes">
+            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et veli
+              in, blandit molestie dolor.</figcaption>
+          </figure>
+          <figure class="single-filme">
+            <span>Lorem</span>
+            <img src="./assets/img/img-anime08.jpg" alt="Filmes">
+            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et veli
+              in, blandit molestie dolor.</figcaption>
+          </figure>
+        </div>
       </div>
-      <div class="container-noticias">
-        <div class="cards-recentes">
-          <img src="./assets/img/recente01.jpg" alt="">
-          <div class="ds-recentes">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
-          </div>
-          <div class="top-single">
-            <p>Lorem</p>
-          </div>
-        </div> <!-- fim cards -->
-        <div class="cards-recentes">
-          <img src="./assets/img/recente02.jpg" alt="">
-          <div class="ds-recentes">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
-          </div>
-          <div class="top-single">
-            <p>Lorem</p>
-          </div>
-        </div> <!-- fim cards -->
-        <div class="cards-recentes">
-          <img src="./assets/img/recente03.jpg" alt="">
-          <div class="ds-recentes">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
-          </div>
-          <div class="top-single">
-            <p>Lorem</p>
-          </div>
-        </div> <!-- fim cards -->
-        <div class="cards-recentes">
-          <img src="./assets/img/recente04.jpg" alt="">
-          <div class="ds-recentes">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
-          </div>
-          <div class="top-single">
-            <p>Lorem</p>
-          </div>
-        </div> <!-- fim cards -->
-        <div class="cards-recentes">
-          <img src="./assets/img/recente05.jpg" alt="">
-          <div class="ds-recentes">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
-          </div>
-          <div class="top-single">
-            <p>Lorem</p>
-          </div>
-        </div> <!-- fim cards -->
-        <div class="cards-recentes">
-          <img src="./assets/img/recente06.jpg" alt="">
-          <div class="ds-recentes">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
-          </div>
-          <div class="top-single">
-            <p>Lorem</p>
-          </div>
-        </div> <!-- fim cards -->
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <footer>
-    <div class="container-rodape">
-      <h2>Naped</h2>
-      <p>Todas as imagens de filmes, séries e etc são marcas registradas <span>dos seus respectivos proprietários.</span></p>
-    </div>
-  </footer>
-  
+    <section class="noticias-recentes">
+      <div class="container">
+        <div class="title">
+          <h3>Notícias mais recentes</h3>
+        </div>
+        <div class="container-recentes">
+
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <script src="./assets/scripts/main.js"></script>
 </body>
+
 </html>
