--- a/desafio-10/index.html
+++ b/desafio-10/index.html
@@ -100,11 +100,57 @@
           <h3>Notícias mais recentes</h3>
         </div>
         <div class="container-recentes">
-
+          <figure class="single-recentes">
+            <span>Lorem</span>
+            <img src="./assets/img/recente01.jpg" alt="Filmes recentes">
+            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit
+              in, blandit molestie dolor.</figcaption>
+          </figure>
+          <figure class="single-recentes">
+            <span>Lorem</span>
+            <img src="./assets/img/recente02.jpg" alt="Filmes recentes">
+            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit
+              in, blandit molestie dolor.</figcaption>
+          </figure>
+          <figure class="single-recentes">
+            <span>Lorem</span>
+            <img src="./assets/img/recente03.jpg" alt="Filmes recentes">
+            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit
+              in, blandit molestie dolor.</figcaption>
+          </figure>
+          <figure class="single-recentes">
+            <span>Lorem</span>
+            <img src="./assets/img/recente04.jpg" alt="Filmes recentes">
+            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit
+              in, blandit molestie dolor.</figcaption>
+          </figure>
+          <figure class="single-recentes">
+            <span>Lorem</span>
+            <img src="./assets/img/recente05.jpg" alt="Filmes recentes">
+            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit
+              in, blandit molestie dolor.</figcaption>
+          </figure>
+          <figure class="single-recentes">
+            <span>Lorem</span>
+            <img src="./assets/img/recente06.jpg" alt="Filmes recentes">
+            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit
+              in, blandit molestie dolor.</figcaption>
+          </figure>
         </div>
       </div>
     </section>
   </main>
+
+  <footer>
+    <div class="container">
+      <div class="logo">
+        <h2>Naped</h2>
+      </div>
+      <div class="copy">
+        <p>Todas as imagens de filmes, séries e etc são marcas registradas dos seus respectivos proprietários.</p>
+      </div>
+    </div>
+  </footer>
 
   <script src="./assets/scripts/main.js"></script>
 </body>
