--- a/desafio-10/noticias.html
+++ b/desafio-10/noticias.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-bt">
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | Naped</title>
+  <title>Notícias | Naped</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,64 +34,35 @@
   </header>
 
   <main>
-    <section class="intro">
+    <section class="intro-noticia">
       <div class="container">
-        <h2>Mundo nerd? <span>Naped!</span></h2>
-        <p>O Naped pode ser sua fonte de informações sobre o mundo nerd e outros assuntos relacionados.</p>
-      </div>
-    </section>
-
-    <section class="tops-do-dia">
-      <div class="container">
-        <figure class="top1 tops">
-          <span>Lorem</span>
-          <img src="./assets/img/top1.jpg" alt="Top 1 do dia">
-          <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in,
-            blandit molestie dolor.</figcaption>
+        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis neque sed odio.</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <span>00 de Julho de 2021</span>
+        <figure class="img-noticia">
+          <img src="./assets/img/img-noticia01.jpg" alt="Imagem de notícia">
         </figure>
-        <div class="container-tops">
-          <figure class="tops">
-            <span>Lorem</span>
-            <img src="./assets/img/top2.jpg" alt="Top 2 do dia">
-            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit
-              in, blandit molestie dolor.</figcaption>
-          </figure>
-          <figure class="tops">
-            <span>Lorem</span>
-            <img src="./assets/img/top3.jpg" alt="Top 3 do dia">
-            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et veli
-              in, blandit molestie dolor.</figcaption>
-          </figure>
-        </div>
-      </div>
-    </section>
-
-    <section class="geral">
-      <div class="container">
-        <div class="container-scroll"></div>
-        <div class="container-restante">
-          <div class="title">
-            <h3>Lorem ipsum dolor</h3>
-          </div>
-          <figure class="single-filme">
-            <span>Lorem</span>
-            <img src="./assets/img/img-anime06.jpg" alt="Filmes">
-            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et veli
-              in, blandit molestie dolor.</figcaption>
-          </figure>
-          <figure class="single-filme">
-            <span>Lorem</span>
-            <img src="./assets/img/img-anime07.jpg" alt="Filmes">
-            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et veli
-              in, blandit molestie dolor.</figcaption>
-          </figure>
-          <figure class="single-filme">
-            <span>Lorem</span>
-            <img src="./assets/img/img-anime08.jpg" alt="Filmes">
-            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et veli
-              in, blandit molestie dolor.</figcaption>
-          </figure>
-        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in mauris vel dolor consectetur scelerisque
+          quis eu eros. Morbi varius eu odio nec vehicula. Maecenas blandit nunc vitae enim fermentum, nec ullamcorper
+          magna molestie. Fusce efficitur ipsum ullamcorper tellus pharetra, et vehicula enim feugiat. Sed scelerisque
+          at orci rhoncus dapibus. Donec maximus porttitor mauris. Sed tempus felis sit amet gravida sagittis. Ut
+          eleifend ornare leo et auctor.
+        </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in mauris vel dolor consectetur scelerisque
+          quis eu eros. Morbi varius eu odio nec vehicula. Maecenas blandit nunc vitae enim fermentum, nec ullamcorper
+          magna molestie. Fusce efficitur ipsum ullamcorper tellus pharetra, et vehicula enim feugiat. Sed scelerisque
+          at orci rhoncus dapibus. Donec maximus porttitor mauris. Sed tempus felis sit amet gravida sagittis. Ut
+          eleifend ornare leo et auctor.
+        </p>
+        <figure class="img-noticia">
+          <img src="./assets/img/img-noticia02.jpg" alt="Imagem de notícia">
+        </figure>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in mauris vel dolor consectetur scelerisque
+          quis eu eros. Morbi varius eu odio nec vehicula. Maecenas blandit nunc vitae enim fermentum, nec ullamcorper
+          magna molestie. Fusce efficitur ipsum ullamcorper tellus pharetra, et vehicula enim feugiat. Sed scelerisque
+          at orci rhoncus dapibus. Donec maximus porttitor mauris. Sed tempus felis sit amet gravida sagittis. Ut
+          eleifend ornare leo et auctor.
+        </p>
       </div>
     </section>
 
