--- a/desafio-10/index.html
+++ b/desafio-10/index.html
@@ -24,7 +24,7 @@
           <li><a href="./index.html">Home</a></li>
           <li><a href="#">Séries</a></li>
           <li><a href="#">Filmes</a></li>
-          <li><a href="#">Animes</a></li>
+          <li><a href="./animes.html">Animes</a></li>
           <li><a href="#">Games</a></li>
           <li><a href="#" class="conta">Minha conta</a></li>
         </ul>
