--- a/desafio-10/index.html
+++ b/desafio-10/index.html
@@ -16,17 +16,19 @@
 <body>
   <header>
     <nav class="container">
-      <div class="logo">
-        <h1>Naped</h1>
-      </div>
+      <a href="./index.html">
+        <div class="logo">
+          <h1>Naped</h1>
+        </div>
+      </a>
       <div class="menu">
         <ul>
           <li><a href="./index.html">Home</a></li>
-          <li><a href="#">Séries</a></li>
-          <li><a href="#">Filmes</a></li>
+          <li><a href="./animes.html">Séries</a></li>
+          <li><a href="./animes.html">Filmes</a></li>
           <li><a href="./animes.html">Animes</a></li>
-          <li><a href="#">Games</a></li>
-          <li><a href="#" class="conta">Minha conta</a></li>
+          <li><a href="./animes.html">Games</a></li>
+          <li><a href="./error404.html" class="conta">Minha conta</a></li>
         </ul>
       </div>
     </nav>
