--- a/desafio-10/animes.html
+++ b/desafio-10/animes.html
@@ -22,8 +22,12 @@
           <h1>Naped</h1>
         </div>
       </a>
+      <input type="checkbox" id="btn-mobile">
+      <label for="btn-mobile">
+        <span class="span-btn-mobile"></span>
+      </label>
       <div class="menu">
-        <ul>
+        <ul class="links-menu">
           <li><a href="./index.html">Home</a></li>
           <li><a href="./animes.html">Séries</a></li>
           <li><a href="./animes.html">Filmes</a></li>
@@ -47,7 +51,7 @@
           </figcaption>
         </figure>
         <form class="pesquisa-intro">
-          <input type="search" placeholder="Quer ajuda na procura? Pesquise aqui">
+          <input type="text" placeholder="Quer ajuda na procura?">
           <img src="./assets/img/pesquisar.svg" alt="Ícone de pesquisar">
         </form>
       </div>
@@ -156,6 +160,10 @@
       </div>
     </div>
   </footer>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="./assets/scripts/main.js"></script>
 </body>
 
 </html>
