--- a/desafio-10/index.html
+++ b/desafio-10/index.html
@@ -21,8 +21,12 @@
           <h1>Naped</h1>
         </div>
       </a>
+      <input type="checkbox" id="btn-mobile">
+      <label for="btn-mobile">
+        <span class="span-btn-mobile"></span>
+      </label>
       <div class="menu">
-        <ul>
+        <ul class="links-menu">
           <li><a href="./index.html">Home</a></li>
           <li><a href="./animes.html">Séries</a></li>
           <li><a href="./animes.html">Filmes</a></li>
@@ -51,7 +55,7 @@
             blandit molestie dolor.</figcaption>
         </figure>
         <div class="container-tops">
-          <figure class="tops">
+          <figure class="top2 tops">
             <span>Lorem</span>
             <img src="./assets/img/top2.jpg" alt="Top 2 do dia">
             <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit
@@ -74,24 +78,26 @@
           <div class="title">
             <h3>Lorem ipsum dolor</h3>
           </div>
-          <figure class="single-filme">
-            <span>Lorem</span>
-            <img src="./assets/img/img-anime06.jpg" alt="Filmes">
-            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et veli
-              in, blandit molestie dolor.</figcaption>
-          </figure>
-          <figure class="single-filme">
-            <span>Lorem</span>
-            <img src="./assets/img/img-anime07.jpg" alt="Filmes">
-            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et veli
-              in, blandit molestie dolor.</figcaption>
-          </figure>
-          <figure class="single-filme">
-            <span>Lorem</span>
-            <img src="./assets/img/img-anime08.jpg" alt="Filmes">
-            <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et veli
-              in, blandit molestie dolor.</figcaption>
-          </figure>
+          <div class="container-filmes">
+            <figure class="single-filme">
+              <span>Lorem</span>
+              <img src="./assets/img/img-anime06.jpg" alt="Filmes">
+              <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et veli
+                in, blandit molestie dolor.</figcaption>
+            </figure>
+            <figure class="single-filme">
+              <span>Lorem</span>
+              <img src="./assets/img/img-anime07.jpg" alt="Filmes">
+              <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et veli
+                in, blandit molestie dolor.</figcaption>
+            </figure>
+            <figure class="single-filme">
+              <span>Lorem</span>
+              <img src="./assets/img/img-anime08.jpg" alt="Filmes">
+              <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et veli
+                in, blandit molestie dolor.</figcaption>
+            </figure>
+          </div>
         </div>
       </div>
     </section>
@@ -166,6 +172,8 @@
     </div>
   </footer>
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="./assets/scripts/main.js"></script>
 </body>
 
