--- a/desafio-12/index.html
+++ b/desafio-12/index.html
@@ -17,13 +17,91 @@
   <main>
     <section class="intro">
       <div class="container">
-        <h1>La P <span>i</span><span>z</span><span>z</span> a</h1>
+        <h1>La P<span>i</span><span>z</span><span>z</span>a</h1>
       </div>
     </section>
 
     <section class="vendas">
+      <img src="./assets/img/planta.png" class="imgs-sobre planta" alt="Imagem de uma planta">
       <div class="container">
+        <div class="title">
+          <img src="./assets/img/peixe.png" class="imgs-sobre peixe" alt="Imagem de um peixe">
+          <h2>Mais vendidas</h2>
+          <img src="./assets/img/cogumelo.png" class="imgs-sobre cogumelo" alt="Imagem de um cogumelo">
+        </div>
+        <div class="container-vendidas">
+          <div class="single-vendidas">
+            <img src="./assets/img/pizza01.png" class="pizza" alt="Imagem da pizza">
+            <div class="ds-vendidas">
+              <h3>La Cuma</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h4>R$ 23</h4>
+              <a href="#">Comprar agora</a>
+            </div>
+            <figure class="love">
+              <img src="./assets/img/love.svg" alt="Ícone de favoritar">
+            </figure>
+          </div>
+          <div class="single-vendidas">
+            <img src="./assets/img/pizza02.png" class="pizza" alt="Imagem da pizza">
+            <div class="ds-vendidas">
+              <h3>La Menta</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h4>R$ 23</h4>
+              <a href="#">Comprar agora</a>
+            </div>
+            <figure class="love">
+              <img src="./assets/img/love.svg" alt="Ícone de favoritar">
+            </figure>
+          </div>
+          <div class="single-vendidas">
+            <img src="./assets/img/pizza03.png" class="pizza" alt="Imagem da pizza">
+            <div class="ds-vendidas">
+              <h3>La Bana</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h4>R$ 23</h4>
+              <a href="#">Comprar agora</a>
+            </div>
+            <figure class="love">
+              <img src="./assets/img/love.svg" alt="Ícone de favoritar">
+            </figure>
+          </div>
+          <div class="single-vendidas">
+            <img src="./assets/img/pizza04.png" class="pizza" alt="Imagem da pizza">
+            <div class="ds-vendidas">
+              <h3>La toca</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h4>R$ 23</h4>
+              <a href="#">Comprar agora</a>
+            </div>
+            <figure class="love">
+              <img src="./assets/img/love.svg" alt="Ícone de favoritar">
+            </figure>
+          </div>
+          <img src="./assets/img/folha.png" class="imgs-sobre folha" alt="Imagem de uma folha">
+        </div>
+        <img src="./assets/img/pimenta.png" class="imgs-sobre pimenta" alt="Imagem de uma pimenta">
+      </div>
+    </section>
 
+    <section class="sobre">
+      <div class="container">
+        <img src="./assets/img/tomate.png" class="imgs-sobre tomate" alt="Imagem de um tomate">
+        <figure class="img-sobre">
+          <img src="./assets/img/imgSobre.png" alt="Imagem da loja">
+          <div class="imgs-sobre pizza05">
+            <img src="./assets/img/pizza05.png" alt="Imagem da pizza">
+          </div>
+        </figure>
+        <div class="ds-sobre">
+          <h2>Sobre a La P<span>i</span><span>z</span><span>z</span>a</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis justo sem. Donec consequat, nunc a
+            dapibus dapibus, justo dolor tristique tortor, sit amet tincidunt lorem nisl at ex. Cras dolor purus, varius
+            in euismod pretium, finibus
+            nec mi. Curabitur aliquam pharetra lectus in pharetra. Nullam viverra elementum neque quis fermentum.</p>
+          <a href="#">Ler mais</a>
+          <img src="./assets/img/pizza06.png" class="imgs-sobre pizza06" alt="Imagem da pizza">
+        </div>
       </div>
     </section>
   </main>
