--- a/desafio-13/index.html
+++ b/desafio-13/index.html
@@ -25,7 +25,7 @@
             <img src="./assets/img/logo.svg" alt="Imagem da logo do jogo">
           </figure>
         </div>
-        <figure>
+        <figure class="netflix">
           <img src="./assets/img/netflix.svg" alt="Imagem da Netflix">
         </figure>
       </nav>
@@ -57,7 +57,7 @@
           </div>
         </div>
       </div>
-      <div></div>
+      <div class="bg-transparent"></div>
     </section>
   </main>
 </body>
