--- a/desafio-14/index.html
+++ b/desafio-14/index.html
@@ -27,12 +27,24 @@
     <section class="banner">
       <div class="container">
         <div class="ds-banner">
-          <h1>Ajude quem <span>precisa de ajuda</span></h1>
+          <h1>Ajude quem <span class="line">
+              <span class="img-linha">precisa
+                <img src="./assets/img/linha.png" alt="Imagem de uma linha">
+              </span>
+              de ajuda</span>
+          </h1>
           <p>Com apenas 1 real você pode me ajudar a alimentar cães de ruas.</p>
           <div class="links">
             <a href="#">Contribuir</a>
             <a href="#">Entrar em contato</a>
           </div>
+        </div>
+        <div class="img-banner">
+          <figure class="imgs">
+            <img src="./assets/img/retangulo.png">
+            <img src="./assets/img/cachorro.png" alt="Imagem de um Cachorro">
+            <img src="./assets/img/racao.png" alt="Imagem de ração">
+          </figure>
         </div>
       </div>
     </section>
