--- a/desafio-19/index.html
+++ b/desafio-19/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto:wght@400;700&family=Sora:wght@400;600&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Nunito:wght@700&family=Roboto:wght@400;700&family=Sora:wght@400;600&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
@@ -95,20 +95,62 @@
       <div class="container">
         <div class="title">
           <h2>Nossos Planos</h2>
-          <p>Amet in elementum nulla scelerisque dui, egestas at. Elit consectetur turpis elementum amet vitae et etiam
-            nec. Varius volutpat hac adipiscing tincidunt pretium.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi quis euismod ultrices.</p>
         </div>
         <div class="container-planos">
           <div class="single-planos">
-
+            <h3>Bronze</h3>
+            <div class="valor">
+              <span>R$</span>
+              <span>28</span>
+              <span>/mês</span>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi quis euismod ultrices.</p>
+            <a href="#">Assinar</a>
+          </div>
+          <div class="single-planos">
+            <h3>Prata</h3>
+            <a href="#">Preferido</a>
+            <div class="valor">
+              <span>R$</span>
+              <span>57</span>
+              <span>/mês</span>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi quis euismod ultrices.</p>
+            <a href="#">Assinar</a>
+          </div>
+          <div class="single-planos">
+            <h3>Ouro</h3>
+            <div class="valor">
+              <span>R$</span>
+              <span>94</span>
+              <span>/mês</span>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi quis euismod ultrices.</p>
+            <a href="#">Assinar</a>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section id="contato">
+      <div class="container">
+        <div class="title">
+          <h2>Contato</h2>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi quis euismod ultrices.</p>
+        <form action="">
+          <input type="email" placeholder="Seu melhor e-mail" required>
+          <input type="submit" value="Enviar">
+        </form>
       </div>
     </section>
   </main>
 
   <footer>
-
+    <div class="container">
+      <p>Rachi - Todos os direitos reservados.</p>
+    </div>
   </footer>
 </body>
 
