--- a/desafio-19/index.html
+++ b/desafio-19/index.html
@@ -27,8 +27,8 @@
         <ul>
           <li><a href="#funcionalidades">Funcionalidades</a></li>
           <li><a href="#app">App</a></li>
-          <li><a href="#">Planos</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="#planos">Planos</a></li>
+          <li><a href="#contato">Contato</a></li>
         </ul>
       </div>
     </nav>
@@ -137,9 +137,9 @@
       <div class="container">
         <div class="title">
           <h2>Contato</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi quis euismod ultrices.</p>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi quis euismod ultrices.</p>
-        <form action="">
+        <form>
           <input type="email" placeholder="Seu melhor e-mail" required>
           <input type="submit" value="Enviar">
         </form>
