--- a/desafio-19/index.html
+++ b/desafio-19/index.html
@@ -31,6 +31,9 @@
           <li><a href="#contato">Contato</a></li>
         </ul>
       </div>
+      <figure class="icon-menu">
+        <img src="./assets/img/menu.svg" alt="Ícone do menu">
+      </figure>
     </nav>
   </header>
 
