--- a/desafio-16/index.html
+++ b/desafio-16/index.html
@@ -16,11 +16,110 @@
 <body>
   <header>
     <nav class="container">
-      <figure class="logo">
-        <figcaption>Feliz Natal</figcaption>
-      </figure>
+      <a href="./index.html">
+        <figure class="logo">
+          <img src="./assets/img/logo.svg" alt="Imagem do noel">
+          <figcaption>Feliz Natal</figcaption>
+        </figure>
+      </a>
+      <div class="menu">
+        <ul>
+          <li><a href="./index.html">Início</a></li>
+          <li><a href="#acessorios">Acessórios</a></li>
+          <li><a href="#doacao">Doação</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
+
+  <main>
+    <section class="intro">
+      <div class="container">
+        <div class="ds-intro">
+          <h1>Feliz Natal e <span>Feliz Ano Novo!</span></h1>
+          <p>Nessas festas de fim de ano mande um presente para a pessoa amada e compartilhe a alegria do Natal.</p>
+          <a href="#"><img src="./assets/img/presente.svg" alt="Imagem de um presente"> Fazer uma doação</a>
+        </div>
+        <figure class="img-intro">
+          <img src="./assets/img/intro.png" alt="Imagem intro">
+        </figure>
+      </div>
+    </section>
+
+    <section id="acessorios">
+      <div class="container">
+        <div class="title">
+          <h2>Acessórios</h2>
+          <p>Nessas festas de fim de ano mande um presente para a pessoa amada e compartilhe a alegria do Natal.</p>
+        </div>
+        <div class="container-acessorios">
+          <div class="single-acessorios">
+            <img src="./assets/img/giving1.png" alt="Imagem de acessórios">
+            <h3>Presentes</h3>
+            <p>Eles são os melhores presentes que existem.</p>
+          </div>
+          <div class="single-acessorios">
+            <img src="./assets/img/giving2.png" alt="Imagem de acessórios">
+            <h3>Enfeites</h3>
+            <p>Dê uma decoração.</p>
+          </div>
+          <div class="single-acessorios">
+            <img src="./assets/img/giving4.png" alt="Imagem de acessórios">
+            <h3>Doces</h3>
+            <p>Aproveite os doces natalinos.</p>
+          </div>
+          <div class="single-acessorios">
+            <img src="./assets/img/giving3.png" alt="Imagem de acessórios">
+            <h3>Muito amor</h3>
+            <p>Aproveite os sentimentos que duram para sempre.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="doacao">
+      <div class="container">
+        <figure class="img-doacao">
+          <img src="./assets/img/sobre.png" alt="Imagem de doação">
+        </figure>
+        <div class="ds-doacao">
+          <h2>Comemore com muito amor!</h2>
+          <p>Nestes feriados, festeje com muito amor e paz, oferecendo muitas bênçãos aos nossos entes queridos, amigos
+            e vizinhos, desejando-lhes um Feliz Natal.</p>
+          <a href="#"><img src="./assets/img/presente.svg" alt="Imagem de um presente"> Fazer uma doação</a>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer id="contato">
+    <div class="container">
+      <a href="./index.html">
+        <figure class="logo">
+          <img src="./assets/img/noel.svg" alt="Imagem do noel">
+          <figcaption>Feliz Natal</figcaption>
+        </figure>
+      </a>
+      <div class="redes-sociais">
+        <figure class="single-redes-sociais">
+          <img src="./assets/img/twitter.svg" alt="Imagem do twitter">
+        </figure>
+        <figure class="single-redes-sociais">
+          <img src="./assets/img/youtube.svg" alt="Imagem do youtube">
+        </figure>
+        <figure class="single-redes-sociais">
+          <img src="./assets/img/linkedin.svg" alt="Imagem do linkedin">
+        </figure>
+        <figure class="single-redes-sociais">
+          <img src="./assets/img/instagram.svg" alt="Imagem do instagram">
+        </figure>
+        <figure class="single-redes-sociais">
+          <img src="./assets/img/facebook.svg" alt="Imagem do facebook">
+        </figure>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
