--- a/desafio-16/index.html
+++ b/desafio-16/index.html
@@ -30,6 +30,9 @@
           <li><a href="#contato">Contato</a></li>
         </ul>
       </div>
+      <figure class="menu-hamburguer">
+        <img src="./assets/img/menu.svg" alt="Ícone do menu">
+      </figure>
     </nav>
   </header>
 
