--- a/desafio-18/index.html
+++ b/desafio-18/index.html
@@ -15,26 +15,51 @@
 
 <body>
   <aside>
-    <nav class="container">
-      <figure class="img-user">
-        <img src="./assets/img/user.png" alt="Imagem de usuário">
-      </figure>
-      <figure class="redes-sociais">
-        <img src="./assets/img/instagram.svg" alt="Ícone do instagram">
-      </figure>
-      <figure class="redes-sociais">
-        <img src="./assets/img/twitter.svg" alt="Ícone do twitter">
-      </figure>
-      <figure class="redes-sociais">
-        <img src="./assets/img/facebook.svg" alt="Ícone do facebook">
-      </figure>
-    </nav>
+    <figure class="user">
+      <img src="./assets/img/user.png" alt="Imagem do usuário">
+    </figure>
+    <figure class="redes-sociais">
+      <img src="./assets/img/instagram.svg" alt="Ícone do instagram">
+    </figure>
+    <figure class="redes-sociais">
+      <img src="./assets/img/twitter.svg" alt="Ícone do twitter">
+    </figure>
+    <figure class="redes-sociais">
+      <img src="./assets/img/facebook.svg" alt="Ícone do facebook">
+    </figure>
+    <figure class="search">
+      <img src="./assets/img/search.svg" alt="Ícone de pesquisa">
+    </figure>
   </aside>
-  <header>
-    <nav class="container">
 
-    </nav>
-  </header>
+  <main>
+    <header>
+      <nav>
+        <figure class="marvel">
+          <img src="./assets/img/marvel.svg" alt="Imagem da Marvel">
+        </figure>
+        <div class="container">
+          <figure class="logo">
+            <img src="./assets/img/logo.svg" alt="Imagem de uma aranha">
+          </figure>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Sinopse</a></li>
+            <li><a href="#">Elenco</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <section class="intro">
+      <div class="container">
+        <figure class="img-intro">
+          <img src="./assets/img/name.png" alt="Nome do filme">
+        </figure>
+        <a href="#">Assista ao Trailer <img src="./assets/img/play.svg" alt="Ícone de play"></a>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
