--- a/desafio-17/index.html
+++ b/desafio-17/index.html
@@ -36,10 +36,14 @@
           <p>Quem está usando?</p>
         </div>
         <div id="container-usuarios"></div>
+        <div class="add-usuarios">
+          <a href="#">Adicionar perfil</a>
+        </div>
       </div>
     </section>
   </main>
 
+  <script src="./assets/js/login.js"></script>
 </body>
 
 </html>
