--- a/desafio-17/listagem.html
+++ b/desafio-17/listagem.html
@@ -54,13 +54,35 @@
       </div>
     </section>
 
-    <section>
+    <section class="filmes">
+      <div class="box-filmes">
+        <div class="title">
+          <h2>Populares</h2>
+        </div>
+        <div id="container-filmes">
+          <div class="single-filmes">
 
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
   <footer>
-
+    <div class="logo">
+      <h3>Kenai</h3>
+    </div>
+    <div class="redes-sociais">
+      <figure class="single-redes-sociais">
+        <img src="./assets/img/instagram.svg" alt="Ícone do instagram">
+      </figure>
+      <figure class="single-redes-sociais">
+        <img src="./assets/img/twitter.svg" alt="Ícone do twitter">
+      </figure>
+      <figure class="single-redes-sociais">
+        <img src="./assets/img/facebook.svg" alt="Ícone do facebook">
+      </figure>
+    </div>
   </footer>
 </body>
 
