--- a/desafio-17/listagem.html
+++ b/desafio-17/listagem.html
@@ -59,18 +59,7 @@
         <div class="title">
           <h2>Populares</h2>
         </div>
-        <div id="container-filmes">
-          <!-- <div class="single-filmes">
-            <figure class="img-filmes">
-              <img src="./assets/img/filme01.jpg" alt="Imagem do filme 1">
-            </figure>
-            <div class="ds-filmes">
-              <span>Categoria</span>
-              <img src="./assets/img/stars.svg" alt="Ícone de estrelas">
-              <h3>Shang-Chi</h3>
-            </div>
-          </div> -->
-        </div>
+        <div id="container-filmes"></div>
       </div>
     </section>
   </main>
