--- a/desafio-20/index.html
+++ b/desafio-20/index.html
@@ -20,11 +20,13 @@
         <h2>Portfólio</h2>
       </div>
       <div class="menu">
-        <ul><a href="#">Home</a></ul>
-        <ul><a href="#">Sobre mim</a></ul>
-        <ul><a href="#">Experiência</a></ul>
-        <ul><a href="#">Projetos</a></ul>
-        <ul><a href="#">Contato</a></ul>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Sobre mim</a></li>
+          <li><a href="#">Experiência</a></li>
+          <li><a href="#">Projetos</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
       </div>
     </nav>
   </header>
@@ -50,13 +52,21 @@
     <section id="sobre">
       <div class="container">
         <figure class="img-sobre">
-          <img src="" alt="">
+          <img src="" alt="Imagem de Perfil">
         </figure>
         <div class="ds-sobre">
           <h2>Sobre mim</h2>
           <h3>São Paulo, Brasil</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id egestas dui. Nullam finibus aliquam
             enim quis faucibus. Aenean ac commodo dolor, nec bibendum velit.</p>
+          <figure class="container-midia-social">
+            <img src="./assets/img/twitter.svg" alt="Ícone do twitter">
+            <img src="./assets/img/twitch.svg" alt="Ícone da twitch">
+            <img src="./assets/img/youtube.svg" alt="Ícone do youtube">
+            <img src="./assets/img/figma.svg" alt="Ícone do figma">
+            <img src="./assets/img/codepen.svg" alt="Ícone do codepen">
+            <img src="./assets/img/facebook.svg" alt="Ícone do facebook">
+          </figure>
           <div class="container-links">
             <a href="#" target="_blank"><img src="./assets/img/curriculo.svg" alt="Ícone do currículo">Currículo</a>
             <a href="#" target="_blank"><img src="./assets/img/email.svg" alt="Ícone do email">E-mail</a>
