--- a/desafio-14/index.html
+++ b/desafio-14/index.html
@@ -39,13 +39,9 @@
             <a href="#">Entrar em contato</a>
           </div>
         </div>
-        <div class="img-banner">
-          <figure class="imgs">
-            <img src="./assets/img/retangulo.png">
-            <img src="./assets/img/cachorro.png" alt="Imagem de um Cachorro">
-            <img src="./assets/img/racao.png" alt="Imagem de ração">
-          </figure>
-        </div>
+        <figure class="img-banner">
+          <img src="./assets/img/dog.svg" alt="Imagem do cachorro">
+        </figure>
       </div>
     </section>
   </main>
