--- a/desafio-20/index.html
+++ b/desafio-20/index.html
@@ -77,7 +77,9 @@
 
     <section id="experiencia">
       <div class="container">
-
+        <div class="left">
+          <h2>Experiência</h2>
+        </div>
       </div>
     </section>
   </main>
