--- a/desafio-13/index.html
+++ b/desafio-13/index.html
@@ -14,52 +14,36 @@
 </head>
 
 <body>
-  <main>
-    <header>
-      <nav class="container">
-        <div class="left">
-          <figure class="riot">
-            <img src="./assets/img/riot.svg" alt="Imagem da Riot Games">
-          </figure>
-          <figure class="logo">
-            <img src="./assets/img/logo.svg" alt="Imagem da logo do jogo">
-          </figure>
-        </div>
-        <figure class="netflix">
-          <img src="./assets/img/netflix.svg" alt="Imagem da Netflix">
+  <header>
+    <nav class="container">
+      <figure class="left">
+        <img src="./assets/img/riot.svg" alt="Ícone da riot">
+        <img src="./assets/img/logo.svg" alt="Ícone da logo">
+      </figure>
+      <figure class="right">
+        <img src="./assets/img/netflix.svg" alt="Ícone da netflix">
+      </figure>
+    </nav>
+  </header>
+
+  <section class="banner">
+    <div class="container">
+      <figure class="name-banner">
+        <img src="./assets/img/arcane.png" alt="Ícone da série arcane">
+      </figure>
+      <a href="#">Assista ao trailer</a>
+      <div class="new-episode">
+        <figure class="img-new-episode">
+          <img src="./assets/img/video.png" alt="Ícone do vídeo">
+          <img src="./assets/img/play.svg" alt="Ícone do play">
         </figure>
-      </nav>
-    </header>
-
-    <section class="intro">
-      <div class="container">
-        <div class="trailer">
-          <figure class="img-trailer">
-            <img src="./assets/img/arcane.png" alt="Imagem de Arcane">
-          </figure>
-          <div class="btn-trailer">
-            <a href="#">Assista ao Trailer</a>
-          </div>
+        <div class="ds-new-episode">
+          <h2>Assista ao novo episódios</h2>
+          <p>13 de novembro, 2021</p>
         </div>
       </div>
-    </section>
-
-    <section class="novo-episodio">
-      <div class="container">
-        <div class="novo">
-          <figure class="img-novo-episodio">
-            <img src="./assets/img/video.png" alt="Imagem do vídeo">
-            <img src="./assets/img/play.svg" alt="Ícone de play">
-          </figure>
-          <div class="ds-novo-episodio">
-            <h2>Assista ao novo episódio</h2>
-            <p>13 de novembro, 2021</p>
-          </div>
-        </div>
-      </div>
-      <div class="bg-transparent"></div>
-    </section>
-  </main>
+    </div>
+  </section>
 </body>
 
 </html>
